tests/fixtures/positive/style/OptionalAbstractKeyword.kt
package style

interface Foo {
    abstract fun bar()
    abstract val name: String
}
